--- a/GM/src/app/default/app.component.html
+++ b/GM/src/app/default/app.component.html
@@ -17,7 +17,7 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>-->
-<h1>again ?</h1>
+<h1>again 2 ?</h1>
 <ul>
   <li *ngFor="let value of apiValues">{{value}}</li>
 </ul>
