--- a/GM/src/sass/variables.scss
+++ b/GM/src/sass/variables.scss
@@ -1,1 +1,10 @@
-$color_red : green;
+/***********************
+  Couleurs principales
+ **********************/
+
+
+$color_main_1: #FFEBDC;
+$color_main_2: #FEAB6D;
+$color_main_3: #FC7307;
+$color_main_4: #9D4502;
+$color_main_5: #341C09;
