--- a/GM/src/styles.scss
+++ b/GM/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@import "sass//variables.scss";
+
+html {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  background-color: $color_main_1;
+  color: $color_main_5;
+}
+
+.container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+}
