--- a/GM/src/app/list-jdr-home/list-jdr-home.component.html
+++ b/GM/src/app/list-jdr-home/list-jdr-home.component.html
@@ -1,3 +1,36 @@
-<p>
-  list-jdr-home works!
-</p>
+<div class="liste-jdr-home">
+  <h3>Liste de vos JDRs actifs</h3>
+  <!-- liste de JDRs-->
+  <div class="row">
+
+    <div class="jdr col-md-2">
+      <!-- un jdr -->
+      <!--<div class="mj">Vous êtes le MJ</div>-->
+      <div class="mj">MJ : JoueurX</div>
+      <div class="nom-jdr">Nom du JDR</div>
+      <div class="icons-jdr">
+        <button class="btn btn-default" title="Accéder aux détails du JDR">
+          Détails
+        </button>
+        <button class="btn btn-default" title="Rejoindre la séance">
+          <i class="glyphicon glyphicon-play"></i> Séance
+        </button>
+      </div>
+    </div>
+
+    <div class="jdr jdr-mj col-md-2">
+      <!-- un jdr -->
+      <div class="mj">Vous êtes le MJ</div>
+      <!--<div class="mj">MJ : JoueurX</div>-->
+      <div class="nom-jdr">Nom du JDR</div>
+      <div class="icons-jdr">
+        <button class="btn btn-default" title="Accéder aux détails du JDR">
+          Détails
+        </button>
+        <button class="btn btn-default" title="Lancer la séance">
+          <i class="glyphicon glyphicon-play"></i> Séance
+        </button>       
+      </div>
+    </div>
+  </div>
+</div>
