--- a/GM/src/app/default/app.component.scss
+++ b/GM/src/app/default/app.component.scss
@@ -6,10 +6,11 @@
   height: 100%;
   width: 100%;
 
-
   .notification, .menu {
     z-index: 999;
-    display: inline-block;
+    position: fixed;
+    top: 0px;
+    //display: inline-block;
     background-color: $color_main_1;
     border-bottom: 2px solid $color_main_2;
     color: $color_main_5;
@@ -25,7 +26,7 @@
   }
 
   .menu {
-    float: left;
+    left: 0px;
     border-radius: 0 0 5px 0;
     border-right: 2px solid $color_main_2;
 
@@ -35,13 +36,61 @@
   }
 
   .notification {
-    float: right;
+    right: 0px;
     border-radius: 0 0 0 5px;
     border-left: 2px solid $color_main_2;
 
     &:hover {
       box-shadow: -1px 1px 10px 0px $color_main_4;
     }
+  }
+
+
+
+  .menu-show, .notification-show {
+    width: 200px;
+    height: auto;
+    text-align: left;
+    padding: 5px;
+
+    &:hover {
+      color: $color_main_5;
+    }
+
+    .title-menu {
+      text-align: center;
+      border-bottom: 1px solid $color_main_3;
+
+      i {
+        float: right;
+        margin-right: 10px;
+      }
+    }
+
+    .niveau1 > li {
+      font-weight: bold;
+    }
+
+    .niveau2 {
+      padding-left: 10px;
+      font-weight: normal;
+    }
+
+    ul {
+      padding-left: 5px;
+      list-style-type: none;
+    }
+
+    .clickable:hover {
+      cursor: pointer;
+      color: $color_main_4;
+      font-weight: bold;
+    }
+  }
+
+  .notification-show .title-menu i {
+      float: left;
+      margin-left: 10px;
   }
 
   .bandeau {
