--- a/GM/src/app/default/app.component.scss
+++ b/GM/src/app/default/app.component.scss
@@ -108,6 +108,13 @@
     .version {
       float: right;
     }
+
+    .login {
+      select {
+        display: inline-block;
+        width: 100px;
+      }
+    }
   }
 }
 
