--- a/GM/src/app/home/home.html
+++ b/GM/src/app/home/home.html
@@ -22,7 +22,7 @@
   <!--<div class="help">?</div>-->
 
   <div class="bandeau">
-    <div class="login">Logué : <b>Joueur X</b></div>
+    <div class="login">Logué : <b>{{connecte.Pseudo}}</b></div>
     <div class="version">Version : <b>0.0.0</b></div>
   </div>
 </div>
