--- a/GM/src/app/list-jdr-home/list-jdr-home.component.html
+++ b/GM/src/app/list-jdr-home/list-jdr-home.component.html
@@ -2,12 +2,13 @@
   <h3>Liste de vos JDRs actifs</h3>
   <!-- liste de JDRs-->
   <div class="row">
-
-    <div class="jdr col-md-2">
-      <!-- un jdr -->
-      <!--<div class="mj">Vous êtes le MJ</div>-->
-      <div class="mj">MJ : JoueurX</div>
-      <div class="nom-jdr">Nom du JDR</div>
+    <div *ngIf="listeJDRUser.length == 0">
+      Vous n'avez aucun jeu de rôle actif.
+    </div>
+    <div class="jdr col-md-2" *ngFor="let jdr of listeJDRUser" [ngClass]="{'jdr-mj' : jdr.MJ.IdUser == _user.IdUser}">
+      <div class="mj" *ngIf="jdr.MJ.IdUser == _user.IdUser">Vous êtes le MJ</div>
+      <div class="mj" *ngIf="jdr.MJ.IdUser != _user.IdUser">MJ : {{jdr.MJ.Pseudo}}</div>
+      <div class="nom-jdr">{{jdr.NomJDR}}</div>
       <div class="icons-jdr">
         <button class="btn btn-default" title="Accéder aux détails du JDR">
           Détails
@@ -15,21 +16,6 @@
         <button class="btn btn-default" title="Rejoindre la séance">
           <i class="glyphicon glyphicon-play"></i> Séance
         </button>
-      </div>
-    </div>
-
-    <div class="jdr jdr-mj col-md-2">
-      <!-- un jdr -->
-      <div class="mj">Vous êtes le MJ</div>
-      <!--<div class="mj">MJ : JoueurX</div>-->
-      <div class="nom-jdr">Nom du JDR</div>
-      <div class="icons-jdr">
-        <button class="btn btn-default" title="Accéder aux détails du JDR">
-          Détails
-        </button>
-        <button class="btn btn-default" title="Lancer la séance">
-          <i class="glyphicon glyphicon-play"></i> Séance
-        </button>       
       </div>
     </div>
   </div>
